refactor: better response types at auth
